Updating the CSS and HTML codes of the entire site to display correctly on mobile

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -396,7 +396,7 @@
     }
 
     .services h1 {
-      font-size: 25px;
+      font-size: 22px;
     }
 
     footer .email-link {
